--- a/pom.xml
+++ b/pom.xml
@@ -169,4 +169,14 @@
     </plugins>
   </build>
 
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>io.qameta.allure</groupId>
+        <artifactId>allure-maven</artifactId>
+        <version>2.10.0</version>
+      </plugin>
+    </plugins>
+  </reporting>
+
 </project>
