--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,12 @@
       <version>5.6.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-testng</artifactId>
+      <version>2.25.0</version>
+    </dependency>
+
 
   </dependencies>
 
@@ -169,14 +175,5 @@
     </plugins>
   </build>
 
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>io.qameta.allure</groupId>
-        <artifactId>allure-maven</artifactId>
-        <version>2.10.0</version>
-      </plugin>
-    </plugins>
-  </reporting>
 
 </project>
