--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,12 @@
       <version>2.25.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-devtools-v86</artifactId>
+      <version>4.0.0-beta-2</version>
+    </dependency>
+
 
   </dependencies>
 
